# RMADA-II

./: Cargo.toml  DELIVERY-CHECKLIST.md  DELIVERY-REPORT.md  DELIVERY-SUMMARY-PHASE4.md  DELIVERY-SUMMARY.md  DEVICE-CLIENT-GUIDE.md  Dispositivo.html  EXECUTIVE-SUMMARY.md  FILES-STRUCTURE.md  FOR-NEXT-DEVELOPER.md  Operação.html  PHASE4-DELIVERY-CHECKLIST.md  QUICK-START-STAGE3.md  README.md  STAGE2-SUMMARY.md  STAGE3-PLAN.md  STAGE3-PROGRESS.md  STAGE3-VISUAL-SUMMARY.md  TL-DR.md  app.js  server.js  styles.css
